cgo/include/urnetwork_sdk.h

char* urnet_conn_local_addr(uint64_t self);
char* urnet_conn_remote_addr(uint64_t self);
/* buffer-out pattern: *inout_len is always set to the needed size. the copy
 * happens and true is returned only when out is non-null and the passed
 * capacity is sufficient. */
bool urnet_decode_base58(const char* s, uint8_t* out, int32_t* inout_len);
bool urnet_decrypt_data(const char* encrypted_data_base58, const char* nonce_base58, const char* shared_secret_base58, uint8_t* out, int32_t* inout_len, char** out_error);
bool urnet_generate_shared_secret(const uint8_t* private_key, int32_t private_key_len, const uint8_t* public_key, int32_t public_key_len, uint8_t* out, int32_t* inout_len, char** out_error);
/* device local key material (stable provider identity across process starts) */
bool urnet_device_local_get_client_key_seed(uint64_t self, uint8_t* out, int32_t* inout_len);
bool urnet_device_local_get_provide_tls_certificate_pem(uint64_t self, uint8_t* out, int32_t* inout_len);
bool urnet_device_local_get_provide_tls_private_key_pem(uint64_t self, uint8_t* out, int32_t* inout_len);
bool urnet_device_local_get_extender_key_seed(uint64_t self, uint8_t* out, int32_t* inout_len);
bool urnet_device_local_key_material_get_client_key_seed(uint64_t self, uint8_t* out, int32_t* inout_len);
bool urnet_device_local_key_material_get_provide_tls_certificate_pem(uint64_t self, uint8_t* out, int32_t* inout_len);
bool urnet_device_local_key_material_get_provide_tls_private_key_pem(uint64_t self, uint8_t* out, int32_t* inout_len);
bool urnet_device_local_key_material_get_extender_key_seed(uint64_t self, uint8_t* out, int32_t* inout_len);
/* post quantum identity (canonical identicon raster + raw identity key) */
bool urnet_render_identicon_png(const uint8_t* input, int32_t input_len, int32_t size, uint8_t* out, int32_t* inout_len, char** out_error);
bool urnet_device_get_public_identity_key(uint64_t self, uint8_t* out, int32_t* inout_len);
/* one borrowed packet from a receive batch */
bool urnet_packet_batch_get(uint64_t self, int64_t index, uint8_t* out, int32_t* inout_len);
/* ----- callback types ----- */

/* AccountEpochsCallback */
typedef void (*urnet_account_epochs_cb)(void* user_data, const char* result_json, const char* err_param);
/* AccountPreferencesGetCallback */
typedef void (*urnet_account_preferences_get_cb)(void* user_data, const char* result_json, const char* err_param);
/* AccountPreferencesSetCallback */
typedef void (*urnet_account_preferences_set_cb)(void* user_data, const char* result_json, const char* err_param);
/* AddAuthCallback */
typedef void (*urnet_add_auth_cb)(void* user_data, const char* result_json, const char* err_param);
/* AllowProductUpdatesListener */
typedef void (*urnet_allow_product_updates_cb)(void* user_data, bool p0);
/* AuthCodeCreateCallback */
typedef void (*urnet_auth_code_create_cb)(void* user_data, const char* result_json, const char* err_param);
/* AuthCodeLoginCallback */
typedef void (*urnet_auth_code_login_cb)(void* user_data, const char* result_json, const char* err_param);
/* AuthLoginCallback */
typedef void (*urnet_auth_login_cb)(void* user_data, const char* result_json, const char* err_param);
/* AuthLoginWithPasswordCallback */
typedef void (*urnet_auth_login_with_password_cb)(void* user_data, const char* result_json, const char* err_param);
/* AuthLogoutListener */
typedef void (*urnet_auth_logout_cb)(void* user_data);
/* AuthNetworkClientCallback */
typedef void (*urnet_auth_network_client_cb)(void* user_data, const char* result_json, const char* err_param);
/* AuthPasswordResetCallback */
typedef void (*urnet_auth_password_reset_cb)(void* user_data, const char* result_json, const char* err_param);
/* AuthVerifyCallback */
typedef void (*urnet_auth_verify_cb)(void* user_data, const char* result_json, const char* err_param);
/* AuthVerifySendCallback */
typedef void (*urnet_auth_verify_send_cb)(void* user_data, const char* result_json, const char* err_param);
/* AuthWalletChallengeCallback */
typedef void (*urnet_auth_wallet_challenge_cb)(void* user_data, const char* result_json, const char* err_param);
/* ChangeNetworkNameCallback */
typedef void (*urnet_change_network_name_cb)(void* user_data, const char* result_json, const char* err_param);
/* CheckBalanceCodeCallback */
typedef void (*urnet_check_balance_code_cb)(void* user_data, const char* result_json, const char* err_param);
/* ClaimNetworkNameCallback */
typedef void (*urnet_claim_network_name_cb)(void* user_data, const char* result_json, const char* err_param);
/* ClientEventsSendCallback */
typedef void (*urnet_client_events_send_cb)(void* user_data, const char* result_json, const char* err_param);
/* CreateAccountWalletCallback */
typedef void (*urnet_create_account_wallet_cb)(void* user_data, const char* result_json, const char* err_param);
/* CreateApiKeyCallback */
typedef void (*urnet_create_api_key_cb)(void* user_data, const char* result_json, const char* err_param);
/* DeleteApiKeyCallback */
typedef void (*urnet_delete_api_key_cb)(void* user_data, const char* result_json, const char* err_param);
/* DeviceSetNameCallback */
typedef void (*urnet_device_set_name_cb)(void* user_data, const char* result_json, const char* err_param);
/* FindLocationsCallback */
typedef void (*urnet_find_locations_cb)(void* user_data, const char* result_json, const char* err_param);
/* FindProviders2Callback */
typedef void (*urnet_find_providers2_cb)(void* user_data, const char* result_json, const char* err_param);
/* FindProvidersCallback */
typedef void (*urnet_find_providers_cb)(void* user_data, const char* result_json, const char* err_param);
/* JwtRefreshListener */
typedef void (*urnet_jwt_refresh_cb)(void* user_data, const char* jwt);
/* SolanaPaymentIntentCallback */
typedef void (*urnet_solana_payment_intent_cb)(void* user_data, const char* result_json, const char* err_param);
/* StripeCreateCheckoutSessionCallback */
typedef void (*urnet_stripe_create_checkout_session_cb)(void* user_data, const char* result_json, const char* err_param);
/* StripePaymentIntentCallback */
typedef void (*urnet_stripe_payment_intent_cb)(void* user_data, const char* result_json, const char* err_param);
/* WalletValidateAddressCallback */
typedef void (*urnet_wallet_validate_address_cb)(void* user_data, const char* result_json, const char* err_param);
/* ----- AccountPreferencesViewController ----- */

uint64_t urnet_account_preferences_view_controller_add_allow_product_updates_listener(uint64_t self, urnet_allow_product_updates_cb listener_state_changed, void* listener_user_data);
void urnet_account_preferences_view_controller_close(uint64_t self);
bool urnet_account_preferences_view_controller_get_allow_product_updates(uint64_t self);
void urnet_account_preferences_view_controller_start(uint64_t self);
void urnet_account_preferences_view_controller_stop(uint64_t self);
void urnet_account_preferences_view_controller_update_allow_product_updates(uint64_t self, bool allow);
/* ----- AccountViewController ----- */

void urnet_account_view_controller_close(uint64_t self);
void urnet_account_view_controller_start(uint64_t self);
void urnet_account_view_controller_stop(uint64_t self);
void urnet_account_view_controller_wallet_validate_address(uint64_t self, const char* address, urnet_wallet_validate_address_cb callback_result, void* callback_user_data);
/* ----- Api ----- */

void urnet_api_account_epochs(uint64_t self, urnet_account_epochs_cb callback_result, void* callback_user_data);
void urnet_api_account_preferences_get(uint64_t self, urnet_account_preferences_get_cb callback_result, void* callback_user_data);
void urnet_api_account_preferences_update(uint64_t self, const char* account_preferences_json, urnet_account_preferences_set_cb callback_result, void* callback_user_data);
void urnet_api_add_auth(uint64_t self, const char* args_json, urnet_add_auth_cb callback_result, void* callback_user_data);
uint64_t urnet_api_add_auth_logout_listener(uint64_t self, urnet_auth_logout_cb listener_auth_logout, void* listener_user_data);
uint64_t urnet_api_add_jwt_refresh_listener(uint64_t self, urnet_jwt_refresh_cb listener_jwt_refreshed, void* listener_user_data);
void urnet_api_auth_code_create(uint64_t self, const char* code_create_args_json, urnet_auth_code_create_cb callback_result, void* callback_user_data);
void urnet_api_auth_code_login(uint64_t self, const char* args_json, urnet_auth_code_login_cb callback_result, void* callback_user_data);
void urnet_api_auth_login(uint64_t self, const char* auth_login_json, urnet_auth_login_cb callback_result, void* callback_user_data);
void urnet_api_auth_login_with_password(uint64_t self, const char* auth_login_with_password_json, urnet_auth_login_with_password_cb callback_result, void* callback_user_data);
void urnet_api_auth_network_client(uint64_t self, const char* auth_network_client_json, urnet_auth_network_client_cb callback_result, void* callback_user_data);
char* urnet_api_auth_network_client_sync(uint64_t self, const char* auth_network_client_json, char** out_error);
void urnet_api_auth_password_reset(uint64_t self, const char* auth_password_reset_json, urnet_auth_password_reset_cb callback_result, void* callback_user_data);
void urnet_api_auth_verify(uint64_t self, const char* auth_verify_json, urnet_auth_verify_cb callback_result, void* callback_user_data);
void urnet_api_auth_verify_send(uint64_t self, const char* auth_verify_send_json, urnet_auth_verify_send_cb callback_result, void* callback_user_data);
void urnet_api_auth_wallet_challenge(uint64_t self, const char* auth_wallet_challenge_json, urnet_auth_wallet_challenge_cb callback_result, void* callback_user_data);
void urnet_api_change_network_name(uint64_t self, const char* args_json, urnet_change_network_name_cb callback_result, void* callback_user_data);
void urnet_api_check_balance_code(uint64_t self, const char* args_json, urnet_check_balance_code_cb callback_result, void* callback_user_data);
void urnet_api_claim_network_name(uint64_t self, const char* args_json, urnet_claim_network_name_cb callback_result, void* callback_user_data);
void urnet_api_client_events_send(uint64_t self, const char* args_json, urnet_client_events_send_cb callback_result, void* callback_user_data);
void urnet_api_close(uint64_t self);
void urnet_api_create_account_wallet(uint64_t self, const char* create_account_wallet_json, urnet_create_account_wallet_cb callback_result, void* callback_user_data);
void urnet_api_create_api_key(uint64_t self, const char* args_json, urnet_create_api_key_cb callback_result, void* callback_user_data);
void urnet_api_create_solana_payment_intent(uint64_t self, const char* args_json, urnet_solana_payment_intent_cb callback_result, void* callback_user_data);
void urnet_api_create_stripe_checkout_session(uint64_t self, const char* args_json, urnet_stripe_create_checkout_session_cb callback_result, void* callback_user_data);
void urnet_api_create_stripe_payment_intent(uint64_t self, const char* args_json, urnet_stripe_payment_intent_cb callback_result, void* callback_user_data);
void urnet_api_delete_api_key(uint64_t self, urnet_delete_api_key_cb callback_result, void* callback_user_data);
void urnet_api_device_set_name(uint64_t self, const char* device_set_name_json, urnet_device_set_name_cb callback_result, void* callback_user_data);
void urnet_api_find_locations(uint64_t self, const char* find_locations_json, urnet_find_locations_cb callback_result, void* callback_user_data);
void urnet_api_find_provider_locations(uint64_t self, const char* find_locations_json, urnet_find_locations_cb callback_result, void* callback_user_data);
void urnet_api_find_providers(uint64_t self, const char* find_providers_json, urnet_find_providers_cb callback_result, void* callback_user_data);
void urnet_api_find_providers2(uint64_t self, const char* find_providers2_json, urnet_find_providers2_cb callback_result, void* callback_user_data);