csharp/Raw.g.cs

  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern IntPtr urnet_conn_local_addr(ulong a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern IntPtr urnet_conn_remote_addr(ulong a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern byte urnet_decode_base58([MarshalAs(UnmanagedType.LPUTF8Str)] string a0, IntPtr a1, ref int a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern byte urnet_decrypt_data([MarshalAs(UnmanagedType.LPUTF8Str)] string a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, [MarshalAs(UnmanagedType.LPUTF8Str)] string a2, IntPtr a3, ref int a4, out IntPtr a5);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern byte urnet_generate_shared_secret(IntPtr a0, int a1, IntPtr a2, int a3, IntPtr a4, ref int a5, out IntPtr a6);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern byte urnet_device_local_get_client_key_seed(ulong a0, IntPtr a1, ref int a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern byte urnet_device_local_get_provide_tls_certificate_pem(ulong a0, IntPtr a1, ref int a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern byte urnet_device_local_get_provide_tls_private_key_pem(ulong a0, IntPtr a1, ref int a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern byte urnet_device_local_get_extender_key_seed(ulong a0, IntPtr a1, ref int a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern byte urnet_device_local_key_material_get_client_key_seed(ulong a0, IntPtr a1, ref int a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern byte urnet_device_local_key_material_get_provide_tls_certificate_pem(ulong a0, IntPtr a1, ref int a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern byte urnet_device_local_key_material_get_provide_tls_private_key_pem(ulong a0, IntPtr a1, ref int a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern byte urnet_device_local_key_material_get_extender_key_seed(ulong a0, IntPtr a1, ref int a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern byte urnet_render_identicon_png(IntPtr a0, int a1, int a2, IntPtr a3, ref int a4, out IntPtr a5);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern byte urnet_device_get_public_identity_key(ulong a0, IntPtr a1, ref int a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern byte urnet_packet_batch_get(ulong a0, long a1, IntPtr a2, ref int a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern ulong urnet_account_preferences_view_controller_add_allow_product_updates_listener(ulong a0, urnet_allow_product_updates_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_account_preferences_view_controller_close(ulong a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern byte urnet_account_preferences_view_controller_get_allow_product_updates(ulong a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_account_preferences_view_controller_start(ulong a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_account_preferences_view_controller_stop(ulong a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_account_preferences_view_controller_update_allow_product_updates(ulong a0, byte a1);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_account_view_controller_close(ulong a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_account_view_controller_start(ulong a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_account_view_controller_stop(ulong a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_account_view_controller_wallet_validate_address(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_wallet_validate_address_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_account_epochs(ulong a0, urnet_account_epochs_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_account_preferences_get(ulong a0, urnet_account_preferences_get_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_account_preferences_update(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_account_preferences_set_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_add_auth(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_add_auth_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern ulong urnet_api_add_auth_logout_listener(ulong a0, urnet_auth_logout_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern ulong urnet_api_add_jwt_refresh_listener(ulong a0, urnet_jwt_refresh_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_auth_code_create(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_auth_code_create_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_auth_code_login(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_auth_code_login_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_auth_login(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_auth_login_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_auth_login_with_password(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_auth_login_with_password_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_auth_network_client(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_auth_network_client_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern IntPtr urnet_api_auth_network_client_sync(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, out IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_auth_password_reset(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_auth_password_reset_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_auth_verify(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_auth_verify_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_auth_verify_send(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_auth_verify_send_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_auth_wallet_challenge(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_auth_wallet_challenge_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_change_network_name(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_change_network_name_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_check_balance_code(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_check_balance_code_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_claim_network_name(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_claim_network_name_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_client_events_send(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_client_events_send_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_close(ulong a0);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_create_account_wallet(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_create_account_wallet_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_create_api_key(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_create_api_key_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_create_solana_payment_intent(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_solana_payment_intent_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_create_stripe_checkout_session(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_stripe_create_checkout_session_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_create_stripe_payment_intent(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_stripe_payment_intent_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_delete_api_key(ulong a0, urnet_delete_api_key_cb a1, IntPtr a2);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_device_set_name(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_device_set_name_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_find_locations(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_find_locations_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_find_provider_locations(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_find_locations_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_find_providers(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_find_providers_cb a2, IntPtr a3);
  [DllImport("URnetworkSdk", CallingConvention = CallingConvention.Cdecl)] public static extern void urnet_api_find_providers2(ulong a0, [MarshalAs(UnmanagedType.LPUTF8Str)] string a1, urnet_find_providers2_cb a2, IntPtr a3);
